--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Portofolio web de Ray Rendón Mesa" />
     <meta name="author" content="Ray Rendon Mesa"> 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://mi-portfolio-blush.vercel.app/book-2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Mi Portfolio-Ray Rendón Mesa</title>
   </head>
   <body>
     <div id="root"></div>
